force-app/main/default/objects/Product2/fields/Category__c.field-meta.xml
<CustomField>
    <fullName>Category__c</fullName>
    <label>Category</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>Market__c</controllingField>
        <valueSetDefinition>
            <value>
                <fullName>Mainline</fullName>
            </value>
            <value>
                <fullName>Intra WA</fullName>
            </value>
            <value>
                <fullName>NAM1</fullName>
            </value>
            <value>
                <fullName>NAM2</fullName>
            </value>
            <value>
                <fullName>NAM3</fullName>
            </value>
            <value>
                <fullName>SAM1</fullName>
            </value>
            <value>
                <fullName>AFR1</fullName>
            </value>
            <value>
                <fullName>AFR2</fullName>
            </value>
            <value>
                <fullName>ASIA2</fullName>
            </value>
            <value>
                <fullName>ASIA3</fullName>
            </value>
            <value>
                <fullName>ASIA4</fullName>
            </value>
            <value>
                <fullName>Prop 1</fullName>
            </value>
            <value>
                <fullName>Prop 2</fullName>
            </value>
            <value>
                <fullName>Prop 3</fullName>
            </value>
            <value>
                <fullName>Prop 4</fullName>
            </value>
            <value>
                <fullName>Route</fullName>
            </value>
            <value>
                <fullName>SAM2</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>