force-app/main/default/objects/Product2/fields/Qantas_Published_Airfare__c.field-meta.xml
<CustomField>
    <fullName>Qantas_Published_Airfare__c</fullName>
    <label>Qantas Published Airfare</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>JBUS</fullName>
            </value>
            <value>
                <fullName>CBUS</fullName>
            </value>
            <value>
                <fullName>YQFLEX</fullName>
            </value>
            <value>
                <fullName>BQFLEX</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>