force-app/main/default/objects/Product2/fields/RFIC_code__c.field-meta.xml
<CustomField>
    <fullName>RFIC_code__c</fullName>
    <label>RFIC code</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>AFPT</fullName>
            </value>
            <value>
                <fullName>AFPS</fullName>
            </value>
            <value>
                <fullName>ICS1</fullName>
                <isActive>false</isActive>
                <label>ICS1</label>
            </value>
            <value>
                <fullName>ICS2</fullName>
                <isActive>false</isActive>
                <label>ICS2</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>