force-app/main/default/objects/Product2/validationRules/Validate_Segment_Market_And_Category.validationRule-meta.xml
<ValidationRule>
    <fullName>Validate_Segment_Market_And_Category</fullName>
    <active>false</active>
    <description>To validate Segment,  Market and Category</description>
    <errorConditionFormula>OR( ISPICKVAL(Family , &apos;&apos;), ISPICKVAL(Market__c , &apos;&apos;),ISPICKVAL(Category__c  , &apos;&apos;))</errorConditionFormula>
    <errorMessage>Please enter Segment, Market &amp; Category</errorMessage>
</ValidationRule>