force-app/main/default/objects/Product2/listViews/AllProducts.listView-meta.xml
<ListView>
    <fullName>AllProducts</fullName>
    <columns>PRODUCT2.FAMILY</columns>
    <columns>Market__c</columns>
    <columns>Category__c</columns>
    <columns>Cabin__c</columns>
    <columns>Qantas_Published_Airfare__c</columns>
    <columns>PRODUCT2.NAME</columns>
    <columns>Standard_Discount__c</columns>
    <columns>PRODUCT2.CUSTOMER_PRODUCT_ID</columns>
    <columns>UPDATEDBY_USER.ALIAS</columns>
    <columns>PRODUCT2.ACTIVE</columns>
    <filterScope>Everything</filterScope>
    <label>All Products</label>
</ListView>